# stationaryorbit.core

./: .gitignore  CMakeLists.txt  README.md  stationaryorbit-core.code-workspace  stationaryorbit.core.code-workspace
cmake/: Findstationaryorbit.core.cmake
include/stationaryorbit/: core.bitoperation.hpp  core.datastructure.hpp  core.delegate.hpp  core.event.hpp  core.exception.hpp  core.iteration.hpp  core.numeral.hpp  core.property.hpp  core.traits.hpp  core.utilities.hpp
include/stationaryorbit/core/: algorithms.hpp  arithmetic.hpp  basicmath.hpp  bitmask.hpp  bitreference.hpp  bitsequencetraits.hpp  bitsequencetypetraits.hpp  bitwidth.hpp  comparabletypetraits.hpp  constarray.hpp  constprogression.hpp  crc.hpp  delegate.hpp  disperse.hpp  divisionresult.hpp  endians.hpp  equatabletypetraits.hpp  event.hpp  fixedpoint.hpp  fractionaldec.hpp  fundamental.hpp  halfangleformula.hpp  hashfunction.hpp  integer.hpp  invalidoperation.hpp  iterator.hpp  iteratoradaptcontainer.hpp  iteratoradapter.hpp  iteratorprocesser.hpp  iteratortraits.hpp  legacyiterator.hpp  logic.hpp  machinprogression.hpp  md5.hpp  multiplelong.hpp  notimplemented.hpp  nullreference.hpp  numericaltraits.hpp  numericaltypetraits.hpp  objectholder.hpp  (+20 more)
src/: CMakeLists.txt  algorithms.cpp  arithmetic.cpp  bitmask.cpp  bitsequencetraits.cpp  bitsequencetypetraits.cpp  bitwidth.cpp  comparabletypetraits.cpp  endians.cpp  equatabletypetraits.cpp  fixedpoint.cpp  integer.cpp  invalidoperation.cpp  machinprogression.cpp  multiplelong.cpp  nullreference.cpp  numericaltraits.cpp  numericaltypetraits.cpp  point.cpp  point2d.cpp  proportion.cpp  rect2dsize.cpp  rectangle.cpp  rectangle2d.cpp  rectanglesize.cpp  rotation.cpp  stdcontainertraits.cpp  stditeratortraits.cpp  traits.cpp  typetraitsbase.cpp  valuetypetraits.cpp  vector2d.cpp
test/: CMakeLists.txt  bitoperation.cpp  delegate.cpp  iteration.cpp  numeral.cpp  property.cpp  test-general.cpp  test-helper.hpp  test.algorithms.cpp  test.arithmeticoperation.cpp  test.basicmath.cpp  test.bitmask.cpp  test.constarray.cpp  test.constprogression.cpp  test.crc.cpp  test.delegate.cpp  test.disperse.cpp  test.endian.cpp  test.fixedpoint.cpp  test.halfangleformula.cpp  test.integer.cpp  test.iterator.cpp  test.logic.cpp  test.machinprogression.cpp  test.md5.cpp  test.objectholder.cpp  test.point2d.cpp  test.property.cpp  test.proportion.cpp  test.range.cpp  test.rectangle2d.cpp  test.ringbuffer.cpp  test.rotation.cpp  test.zerovalue.cpp  utilities.cpp
